# libfaststorage

./: CMakeLists.txt  README.md
3party/clickhouse-cpp-2.3.0/: CMakeLists.txt
3party/clickhouse-cpp-2.3.0/clickhouse/columns/: numeric.cpp  numeric.h
3party/gtest-1.11.0/: CMakeLists.txt
docker/: config.xml
docker/ch2/: metrika.xml
docker/ch3/: metrika.xml
docker/clickhouse_cluster/: config.xml  docker-compose.yml
docker/clickhouse_cluster/ch1/: metrika.xml
docker/clickhouse_cluster/ch4/: metrika.xml
src/: faststorage.hpp  meta_describe.hpp
src/clickhouse_reflect/: ch_cluster.hpp  ch_cluster_connection.hpp  ch_connection.hpp  ch_type_mapping.hpp  inner_define_type.hpp  user_define_type.hpp
src/disk_cache/: disk_cache.hpp  serialize.hpp
src/json_reflect/: json_reflect.hpp
src/reflection/: reflect_meta.hpp  reflection.hpp
unit_test/: CMakeLists.txt  ch_cluster_insert_ut.cpp  ch_insert_ut.cpp  main.cpp  sql.hpp
